# koro

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.local.yml  docker-compose.yml
apps/api/: .env.example  Cargo.toml  Dockerfile  Dockerfile.local-runtime  Dockerfile.sqlx
apps/api/.sqlx/: .gitkeep
apps/api/src/: auth.rs  auth_user.rs  db.rs  error.rs  http.rs  invite.rs  jwt.rs  main.rs  state.rs
apps/api/src/auth/: handlers.rs  mod.rs  models.rs  service.rs  user.rs
apps/api/src/comments/: handlers.rs  models.rs  service.rs
apps/api/src/core/: error.rs  http.rs  mod.rs  uploads.rs
apps/api/src/events/: handlers.rs  models.rs  repository.rs  service.rs
apps/api/src/invites/: handlers.rs  mod.rs  models.rs  service.rs
apps/api/src/issues/: handlers.rs  models.rs  service.rs
apps/api/src/issues/repository/: detail.rs  mod.rs  my_issues.rs
apps/api/src/modules/: mod.rs
apps/api/src/orgs/: handlers.rs  models.rs  service.rs
apps/api/src/projects/: handlers.rs  models.rs  service.rs
apps/api/src/relations/: handlers.rs  models.rs  repository.rs  service.rs
apps/api/src/repos/: invites.rs  mod.rs  orgs.rs  users.rs
apps/api/src/routes/: auth.rs  comments.rs  demo.rs  events.rs  health.rs  invites.rs  issues.rs  mod.rs  orgs.rs  projects.rs  relations.rs  setup.rs  upload.rs  users.rs
apps/api/src/services/: auth.rs  comments.rs  events.rs  health.rs  invites.rs  mod.rs  orgs.rs  projects.rs  relations.rs  setup.rs  upload.rs  users.rs
apps/api/src/users/: handlers.rs  models.rs  service.rs
scripts/: up.ps1  (+7 more)
(+199 files in other folders)
